--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2010-07-01  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* m4/boost.m4: Updating to version currently used in dlvhex trunk.
+	* bootstrap.sh: Likewise.
+
+	* configure.ac (AC_INIT): Bump version to 1.7.0.
+	 (BOOST_REQUIRE): Require boost >= 1.41.
+	Require libxml2 >= 0.25.
+
+	* README: Update.
+	* NEWS: Likewise.
+
+	* COPYING: New file.
+	* COPYING.LESSER: Likewise.
+
+	* AUTHORS: Add Juergen Weinberger.
+
 2010-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* AUTHORS: Add necessary file.
