--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* src/Makefile.am: Add LIBXML2_CFLAGS and LIBXML2_LIBS.
+
 2010-09-02  Juergen Weinberger  <gamsta@gmx.net>
 
 	* Seperated the classes into cpp and header files
