--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-04-10  Juergen Weinberger  <gamsta@gmx.net>
+	* added boost unittests
+
 2011-04-09  Juergen Weinberger  <gamsta@gmx.net>
 	* examples/tests moved to testsuite/tests
 	* run-dlvhex-tests.sh updated for new test dir
