--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ Carmelo D'Aparo
 
 Daniel Scheikl <daniel.scheikl@student.tuwien.ac.at>
 
-Juergen Weinberger <weinma@me.com>
+Juergen Weinberger <gamsta@gmx.net>
